--- a/templates/normal_user_review_search.html
+++ b/templates/normal_user_review_search.html
@@ -36,7 +36,7 @@
     <form action="{{normalUserReviewSearch}}" method="get">
         <fieldset>
             <legend>건물 주소</legend>
-            <input type="text" name="address" id="address1">동
+            <input type="text" name="address" id="address1">
         </fieldset>
     </form>
     <br>
