--- a/templates/room_test.html
+++ b/templates/room_test.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="{% static 'css/normalUserRoomReadTemplate.css' %}">
     <div style="height: 100% ;text-align:center" >
         <img class="left-side-room-img" style= "display: block; margin: 2.8vh auto 2.8vh auto;
-            height: 13vw; width :23vh;" src="{% static 'images/roomImage/' %}{{room.id}}.png">
+            height: 13vw; width :23vh;" src="{% static 'images/roomImage/' %}{{room.roomImage|first}}">
         <div style ="font-size : 20px;">
             <strong><span>주소:</span><span>{{ room.address }}</span></strong>
         </div>
