사용자 정보 확인 페이지 수정

--- a/templates/normal_user_login.html
+++ b/templates/normal_user_login.html
@@ -38,6 +38,6 @@
 </div>
 <div id="sign_up">
     <a type="button" href="{% url 'social:begin' 'kakao' %}?next={{ signup }}">카카오 로그인</a>
-    <button type="button" onclick="location.href = 'http://127.0.0.1:8000/'">돌아가기</button>
+    <button type="button" onclick="location.href = '/'">돌아가기</button>
 </div>
 {% endblock %}
