--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,7 @@
         <div class="nav-item col-1" style="display:inline-block; float:left; height:20px;"></div>
         <div>
             <div style="height:0.7vh;"></div>
-            <a href="http://127.0.0.1:8000/" class="navbar-brand col-1 text-center" id="logo" style="display:inline-block; float:left;"><img style="width:6vh; height:6vh;" src="{% static 'images/logo/logo.png' %}" alt="로고 이미지"></a>
+            <a href="/" class="navbar-brand col-1 text-center" id="logo" style="display:inline-block; float:left;"><img style="width:6vh; height:6vh;" src="{% static 'images/logo/logo.png' %}" alt="로고 이미지"></a>
         </div>
         {% block head_menu %}
         {% endblock %}
