--- a/templates/normal_user_info_check.html
+++ b/templates/normal_user_info_check.html
@@ -2,19 +2,94 @@
 {% load static %}
 
 {% block main_contents %}
+{% if request.path != infoCheck %}
+<meta http-equiv="refresh" content="0; url='{{infoCheck}}'">
+{% else %}
+<script>
+    window.onpageshow = function(event) {
+        if (event.persisted) {
+            document.location.reload();
+        }
+    };
+</script>
+{% endif %}
 <link rel="stylesheet" href="{% static 'css/normalUserInfoCheckTemplate.css' %}">
 <div id="infoCheckAndUpdate">
     <!-정보 확인 및 수정을 위한 공간 / 폼을 통해 정보 확인 및 갱신-->
-    <form method="POST" enctype="multipart/form-data">
+    <form method="POST" enctype="multipart/form-data" action="/change_user_info/" onsubmit="get_layout()">
         {% csrf_token %}
         <table>
             {{userForm.as_table}}
         </table>
-        <input type="submit" value="변경하기">
-        <button type="button">탈퇴하기</button>
+        <div style="float:right;">
+            <input type="submit" value="변경하기">
+            <button type="button">탈퇴하기</button>
+        </div>
     </form>
+    <p>
+        경고 횟수 : <span>{{user.uWarnCount}}</span>회
+    </p>
+    <p>
+        활동 상태 : <span></span>
+    </p>
 </div>
-<div id="others">
-    <!-작성한 리뷰 목록 공간-->
+
+<!- 레이아웃 결정용! -->
+<div>
+    <h1>레이아웃 설정</h1>
+    <input type="radio" name="layout" id="layout1" value="1" checked>
+    <label for="layout1"><img src="{% static 'images/2.png' %}"></label>
+    <input type="radio" name="layout" id="layout2" value="2">
+    <label for="layout2"><img src="{% static 'images/2.png' %}"></label>
 </div>
+
+<div style="word-spacing:15px; float:right; margin : 2.98vh; ">
+    <div style="display: inline-block;">
+    <select id="sort_select_box" name="sort_select_box" onchange="sort()">
+        <option value="1">최신 순</option>
+        {#            현재 주소에서 &sorted=1 파라미터 붙을때#}
+        {#            ex) http://127.0.0.1:8000/room_with_reviews_display/?roomId=1&sorted=1 #}
+        <option value="2">추천 순</option>
+        {#            현재 주소에서 &sorted=2 파라미터 붙을때#}
+        {#            ex) http://127.0.0.1:8000/room_with_reviews_display/?roomId=1&sorted=2 #}
+        <option value="3">정확도 순</option>
+        {#            현재 주소에서 &sorted=3 파라미터 붙을때#}
+        {#            ex) http://127.0.0.1:8000/room_with_reviews_display/?roomId=1&sorted=3 #}
+    </select>
+        </div>
+    <div style="display: inline-block;">
+    <form action='//'>
+        <input style = " cursor : pointer;  background-color : white;" type='button' value = '리뷰 작성'>
+    </form>
+        </div>
+</div>
+<div style="margin : 15vh;" id="reviews">
+    {% for review in reviews %}
+        <div style="border: 3px; margin: auto 0 auto; line-height: 2.8vh;height: 20vh;" >
+            <div style= "height: 12vh; width :6.8vw; display:inline-block; float:left;">
+                {% if review.additionalImage %}
+                    <img class="left-side-room-img" style= "height: 12vh; width :6.8vw;" src="{% static 'images/' %}{{review.additionalImage|first}}">
+                {% endif %}
+            </div>
+            <strong><span style="font-size: 23px; line-height: 2.5vw;">&ensp;
+    {#                리뷰 제목 #}
+                    최신 리뷰 제목 -> {{ review.reviewTitle }}</span></strong>
+            <span style = "float : right;">
+    {#            추천 수 데이터 #}
+                추천 수 {{ review.recommendedOn|length }}</span>
+            <div style = "color: #ECECEC;">&ensp;
+    {#            리뷰 내용 데이터 #}
+                리뷰내용 -> {{ review.reviewSentence }}</div>
+            <span style = "color : #A23355 ;font-size: 1.88vw; letter-spacing :1vw; ">&ensp;
+    {#            리뷰별 아이콘 데이터 목록 #}
+                {% if review.includedIcon %}
+                    {% for icon in review.includedIcon %}
+                        <img src="{% static 'images/iconImage/' %}{{ icon }}">
+                    {% endfor %}
+                {% endif %}
+            </span>
+        </div>
+    {% endfor %}
+</div>
+<script  src="{% static 'js/normalUserInfoCheckTemplate.js' %}"></script>
 {% endblock %}
