--- a/templates/normal_user_info_check.html
+++ b/templates/normal_user_info_check.html
@@ -1,5 +1,5 @@
 {% extends 'normal_user_base.html' %}
-{% load static %}
+{% load index static %}
 
 {% block main_contents %}
 {% if request.path != infoCheck %}
@@ -16,6 +16,7 @@
 <link rel="stylesheet" href="{% static 'css/normalUserInfoCheckTemplate.css' %}">
 <div id="infoCheckAndUpdate">
     <!-정보 확인 및 수정을 위한 공간 / 폼을 통해 정보 확인 및 갱신-->
+    <h1>회원 정보 설정</h1>
     <form method="POST" enctype="multipart/form-data" action="/change_user_info/" onsubmit="get_layout()">
         {% csrf_token %}
         <table>
@@ -30,7 +31,7 @@
         경고 횟수 : <span>{{user.uWarnCount}}</span>회
     </p>
     <p>
-        활동 상태 : <span></span>
+        활동 상태 : <span>{{user|check_active}}</span>
     </p>
 </div>
 
