--- a/templates/normal_user_review_listsearch.html
+++ b/templates/normal_user_review_listsearch.html
@@ -4,6 +4,10 @@
     {% block info %}
     {% endblock %}
     <div style="word-spacing:15px; float:right; margin : 2.98vh; ">
+        <div class="search" style=" float : left; margin: auto; width: 750px; " >
+            <input type="text" placeholder="검색어 입력" style="  width: 70%; border: 1px solid #bbb; border-radius: 8px; padding: 10px 12px; font-size: 15px;">
+            <img style = "width: 30px; top: 30px; right: 30px; margin: auto;" src="https://s3.ap-northeast-2.amazonaws.com/cdn.wecode.co.kr/icon/search.png">
+        </div>
         <div style="display: inline-block;">
         <select id="sort_select_box" name="sort_select_box" onchange="sort()">
             <option value="1">최신 순</option>
@@ -16,11 +20,6 @@
             {#            현재 주소에서 &sorted=3 파라미터 붙을때#}
             {#            ex) http://127.0.0.1:8000/room_with_reviews_display/?roomId=1&sorted=3 #}
         </select>
-            </div>
-        <div style="display: inline-block;">
-        <form action='//'>
-            <input style = " cursor : pointer;  background-color : white;" type='button' value = '리뷰 작성'>
-        </form>
             </div>
     </div>
 <div style="margin : 15vh;" id="reviews">
@@ -77,6 +76,7 @@
         b.style.display = 'none';
         document.getElementById('sort_select_box').appendChild(b);
     }
+
 </script>
 
 {% endblock %}
