마이페이지/내가 쓴 리뷰 페이지 추가
그리고 몇몇 오류 수정도 했습니다.

--- a/static/css/normalUserBaseTemplate.css
+++ b/static/css/normalUserBaseTemplate.css
@@ -13,7 +13,6 @@ div#mainMenu > div.button > a {
   color: white;
   text-decoration: none;
   height: 50px;
-  background-color: none;
 }
 
 div#userInfo {
@@ -46,6 +45,10 @@ button#myInfo {
 
 .bg-red-500 {
   background-color: #dc3545;
+}
+
+body {
+  overflow-y: hidden;
 }
 
 /*# sourceMappingURL=normalUserBaseTemplate.css.map */
