--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,7 @@
 {% url 'infoCheck' as infoCheck %}
 {% url 'normalUserReviewSearch' as normalUserReviewSearch %}
 {% url 'normalUserReviewRead' as normalUserReviewRead %}
+{% url 'wroteReviews' as wroteReviews %}
 
 <!DOCTYPE html>
 <html lang="en">
