일부 내용 수정

--- a/static/css/normalUserReviewListTemplate.scss
+++ b/static/css/normalUserReviewListTemplate.scss
@@ -3,7 +3,7 @@ a.link-secondary {
   font-weight: bold;
   text-decoration: none;
 }
-div#list{
+div#reviews{
   overflow-y:scroll;
   overflow-x:hidden;
 }
