--- a/static/css/baseTemplate.css
+++ b/static/css/baseTemplate.css
@@ -27,15 +27,15 @@ div#midContent {
 }
 
 div#leftSideMenu {
-  min-width: 240px;
+  min-width: 20vh;
 }
 
 div#mainDiv {
-  min-width: 720px;
+  min-width: 60vh;
 }
 
 div#rightSideMenu {
-  min-width: 240px;
+  min-width: 20vh;
 }
 
 div.middle {
