--- a/templates/base.html
+++ b/templates/base.html
@@ -32,15 +32,15 @@
         {% endblock %}
     </div>
     <div id="midContent">
-        <div class="middle" id="leftSideMenu" style="border:2px solid #B3B3B3; border-left:none; width:20vw ;">
+        <div class="middle" id="leftSideMenu" style="border:2px solid #B3B3B3; border-left:none; width:20% ;">
             {% block left_side_bar %}
             {% endblock %}
         </div>
-        <div class="middle" id="mainDiv" style="border:2px solid #B3B3B3; width:60vw;">
+        <div class="middle" id="mainDiv" style="border:2px solid #B3B3B3; width:60%;">
             {% block main_contents %}
             {% endblock %}
         </div>
-        <div class="middle" id="rightSideMenu" style="border:2px solid #B3B3B3; border-right:none; width:20vw;">
+        <div class="middle" id="rightSideMenu" style="border:2px solid #B3B3B3; border-right:none; width:20%;">
             {% block right_side_bar %}
             {% endblock %}
         </div>
