--- a/templates/normal_user_base.html
+++ b/templates/normal_user_base.html
@@ -38,9 +38,9 @@
                   {{ user.last_name }}{{ user.first_name }} 님, 환영합니다.
               </button>
               <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                <li><a class="dropdown-item" href = '{{logout}}'>logout</a></li>
-                <li><a class="dropdown-item" id="myInfo" href = '{{infoCheck}}'>내 정보</a></li>
-                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                <li><a class="dropdown-item" href = '{{wroteReviews}}'>내 리뷰 확인</a></li>
+                <li><a class="dropdown-item" id="myInfo" href = '{{infoCheck}}'>마이페이지</a></li>
+                <li><a class="dropdown-item" href = '{{logout}}'>log out</a></li>
               </ul>
             </div>
         {% else %}
