--- a/templates/normal_user_review_search.html
+++ b/templates/normal_user_review_search.html
@@ -8,6 +8,7 @@
     </div>
     <form id="search_filter" action="{{normalUserReviewSearch}}" onsubmit="get_address()" method="get">
         <fieldset id="icons">
+            <br>
             <legend>포함된 아이콘</legend>
             <input type="checkbox" id="parking_lot" name="icons" value="1">
             <label class="checkbox-inline" for="parking_lot">주차장</label>
@@ -17,7 +18,7 @@
             <label class="checkbox-inline" for="CCTV">CCTV</label>
         </fieldset>
         <fieldset id="built_year">
-            <legend>건축 연도</legend>
+            <legend>원룸 건축 연도</legend>
             <select id="builtFrom" name="builtFrom"></select>
             <span> ~ </span>
             <select id="builtTo" name="builtTo"></select>
