--- a/templates/normal_user_info_check.html
+++ b/templates/normal_user_info_check.html
@@ -110,4 +110,5 @@
         document.getElementById('sort_select_box').appendChild(b);
     }
 </script>
+<script  src="{% static 'js/normalUserInfoCheckTemplate.js' %}"></script>
 {% endblock %}
