--- a/static/css/normalUserRoomReadTemplate.scss
+++ b/static/css/normalUserRoomReadTemplate.scss
@@ -6,7 +6,7 @@ div#reviewContent{
     height:300px;
     border:1px solid grey;
 }
-div#mainDiv{
+div#reviews{
     overflow-y:scroll;
     overflow-x:hidden;
 }
