--- a/templates/normal_user_review_list.html
+++ b/templates/normal_user_review_list.html
@@ -3,37 +3,40 @@
 {% block main_contents %}
     {% block info %}
     {% endblock %}
-    <div style="word-spacing:15px; float:right; margin : 2.98vh; ">
-        <div style="display: inline-block;">
-        <select id="sort_select_box" name="sort_select_box" onchange="sort()">
-            <option value="1">최신 순</option>
-            {#            현재 주소에서 &sorted=1 파라미터 붙을때#}
-            {#            ex) http://127.0.0.1:8000/room_with_reviews_display/?roomId=1&sorted=1 #}
-            <option value="2">추천 순</option>
-            {#            현재 주소에서 &sorted=2 파라미터 붙을때#}
-            {#            ex) http://127.0.0.1:8000/room_with_reviews_display/?roomId=1&sorted=2 #}
-            <option value="3">정확도 순</option>
-            {#            현재 주소에서 &sorted=3 파라미터 붙을때#}
-            {#            ex) http://127.0.0.1:8000/room_with_reviews_display/?roomId=1&sorted=3 #}
-        </select>
-            </div>
-        <div style="display: inline-block;">
-        <form action='//'>
-            <input style = " cursor : pointer;  background-color : white;" type='button' value = '리뷰 작성'>
-        </form>
-            </div>
-    </div>
-<div style="margin : 15vh;" id="reviews">
+<div style="word-spacing:15px; float:right; padding : 2vh; height: 8vh;">
+     <link rel="stylesheet" href="{% static 'css/normalUserReviewListTemplate.css' %}">
+    <div style="display: inline-block;">
+    <select id="sort_select_box" name="sort_select_box" onchange="sort()">
+        <option value="1">최신 순</option>
+        {#            현재 주소에서 &sorted=1 파라미터 붙을때#}
+        {#            ex) http://127.0.0.1:8000/room_with_reviews_display/?roomId=1&sorted=1 #}
+        <option value="2">추천 순</option>
+        {#            현재 주소에서 &sorted=2 파라미터 붙을때#}
+        {#            ex) http://127.0.0.1:8000/room_with_reviews_display/?roomId=1&sorted=2 #}
+        <option value="3">정확도 순</option>
+        {#            현재 주소에서 &sorted=3 파라미터 붙을때#}
+        {#            ex) http://127.0.0.1:8000/room_with_reviews_display/?roomId=1&sorted=3 #}
+    </select>
+        </div>
+    <div style="display: inline-block;">
+    <form action='//'>
+        <input style = " cursor : pointer;  background-color : white;" type='button' value = '리뷰 작성'>
+    </form>
+        </div>
+</div>
+<div style="margin-top : 8vh; height:30vh" id="reviews">
     {% for review in reviews %}
-        <div style="border: 3px; margin: auto 0 auto; line-height: 2.8vh;height: 20vh;" >
+        <div style="border: 3px; padding: 2.8vh 1.56vw 2.8vh 1.56vw; line-height: 2.8vh;height: 20vh; text-align:center;" >
             <div style= "height: 12vh; width :6.8vw; display:inline-block; float:left;">
                 {% if review.additionalImage %}
                     <img style= "height: 12vh; width :6.8vw;" class="left-side-room-img" src="{% static 'images/' %}{{review.additionalImage|first}}">
                 {% endif %}
             </div>
-            <strong><span style="font-size: 23px; line-height: 2.5vw;">&ensp;
-    {#                리뷰 제목 #}
-                    최신 리뷰 제목 -> {{ review.reviewTitle }}</span></strong>
+            <strong><a class="link-secondary" href="{{normalUserReviewRead}}?id={{review.id}}" style="font-size: 23px;">&ensp;
+            {#                리뷰 제목 #}
+                    최신 리뷰 제목 -> {{ review.reviewTitle }}
+                </a>
+            </strong>
             <span style = "float : right;">
     {#            추천 수 데이터 #}
                 추천 수 {{ review.recommendedOn|length }}</span>
