--- a/templates/normal_user_room_read.html
+++ b/templates/normal_user_room_read.html
@@ -2,8 +2,9 @@
 {% load static %}
 {% block info %}
     <link rel="stylesheet" href="{% static 'css/normalUserRoomReadTemplate.css' %}">
-    <div style = "text-align:left; padding: 2.8vh 1.56vw 2.8vh 1.56vw; border-bottom: solid  5px #B3B3B3; height: 41.9vh; ">
-        <img class="left-side-room-img" style= "float : left; display: block; height: 23vh; width :23vh;" src="{% static 'images/roomImage/' %}{{room.roomImage|first}}">
+    <div style = "text-align:left; padding: 2.1% 1.7% 2.1% 1.7%; height: 27.1vh; ">
+        <img class="left-side-room-img" style= "float : left; display: block; height: 23.7vh; width :14.8vw; min-height:142.2px; min-width:177.6px" src="{% static 'images/' %}1.png">
+        <div id="room_map" style="height:23.7vh; width: 41.9vw; min-height:142.2px; min-width:502.8px"></div>
         <div style ="font-size : 25px;">
             <strong><span><br>주소:</span><span>{{ room.address }}</span></strong>
         </div>
