--- a/templates/room_test.html
+++ b/templates/room_test.html
@@ -1,122 +1,41 @@
-{% extends 'normal_user_base.html' %}
+{% extends 'normal_user_review_listsearch.html' %}
 {% load static %}
 {% block left_side_bar %}
     <link rel="stylesheet" href="{% static 'css/normalUserRoomReadTemplate.css' %}">
-    <div style="height: 100% ;text-align:center" >
-        <img class="left-side-room-img" style= "display: block; margin: 2.8vh auto 2.8vh auto;
-            height: 13vw; width :23vh;" src="{% static 'images/roomImage/' %}{{room.id}}.png">
-        <div style ="font-size : 20px;">
-            <strong><span>주소:</span><span>{{ room.address }}</span></strong>
+    <div style="text-align:left;" >
+        <div style ="font-size : 25px;">
+            <strong><span><br>리뷰 검색 필터</span></strong>
         </div>
     <div>
-            <span><br>건축연도 : </span><span>{{ room.builtYear }}</span>
+            <span><br>포함된 아이콘</span><span><br>
+    <label><input type="checkbox" name="color" value="blue"> ♬ </label>
+      <label><input type="checkbox" name="color" value="red"> ★ </label>
+        <label><input type="checkbox" name="color" value="blue"> ● </label>
+      <label><input type="checkbox" name="color" value="red"> △ </label>
+    </span>
         </div>
     <div>
-            <span> 층수 :</span><span>{{ room.commonInfo }}</span>
-        </div>
-    <div>
-            <span> 옵션 : </span><span> </span>
-        </div>
-    </div>
-{% endblock %}
-{% block main_contents %}
-
-    <div style="word-spacing:15px; float:right; margin : 2.98vh; ">
+        <span><br> 리뷰 작성일</span><br>
         <div style="display: inline-block;">
-        <select id="sort_select_box" name="sort_select_box" onchange="sort()">
-            <option value="1">최신 순</option>
-            {#            현재 주소에서 &sorted=1 파라미터 붙을때#}
-            {#            ex) http://127.0.0.1:8000/room_with_reviews_display/?roomId=1&sorted=1 #}
-            <option value="2">추천 순</option>
-            {#            현재 주소에서 &sorted=2 파라미터 붙을때#}
-            {#            ex) http://127.0.0.1:8000/room_with_reviews_display/?roomId=1&sorted=2 #}
-            <option value="3">정확도 순</option>
-            {#            현재 주소에서 &sorted=3 파라미터 붙을때#}
-            {#            ex) http://127.0.0.1:8000/room_with_reviews_display/?roomId=1&sorted=3 #}
+            <select name="sort_select_box" onchange="sort()">
+            <option value="1">시작일</option>
         </select>
             </div>
+            ~
         <div style="display: inline-block;">
-        <form action='//'>
-            <input style = " cursor : pointer;  background-color : white;" type='button' value = '리뷰 작성'>
-        </form>
+            <select name="sort_select_box" onchange="sort()">
+            <option value="1">종료일</option>
+        </select>
             </div>
     </div>
-<<<<<<< Updated upstream
-<div style="margin : 15vh;" id="reviews">
-    {% for review in reviews %}
-        <div style="border: 3px; margin: auto 0 auto; line-height: 2.8vh;height: 20vh;" >
-            <div style= "height: 12vh; width :6.8vw; display:inline-block; float:left;">
-                {% if review.additionalImage %}
-                    <img class="left-side-room-img" src="{% static 'images/' %}{{review.additionalImage|first}}">
-                {% endif %}
-            </div>
-            <strong><span style="font-size: 23px; line-height: 2.5vw;">&ensp;
-    {#                리뷰 제목 #}
-                    최신 리뷰 제목 -> {{ review.reviewTitle }}</span></strong>
-            <span style = "float : right;">
-    {#            추천 수 데이터 #}
-                추천 수 {{ review.recommendedOn|length }}</span>
-            <div style = "color: #ECECEC;">&ensp;
-    {#            리뷰 내용 데이터 #}
-                리뷰내용 -> {{ review.reviewSentence }}</div>
-            <span style = "color : #A23355 ;font-size: 1.88vw; letter-spacing :1vw; ">&ensp;
-    {#            리뷰별 아이콘 데이터 목록 #}
-                {% if review.includedIcon %}
-                    {% for icon in review.includedIcon %}
-                        <img src="{% static 'images/iconImage/' %}{{ icon }}">
-                    {% endfor %}
-                {% endif %}
-            </span>
+    <div>
+        <span><br> 검색 테스트</span><br><span>
+        <form CLASS="nav-item col-3" action="{{normalUserReviewSearch}}" id="search-form" style="top:10px;">
+            <div class="nav-item col-9">
+            <input style="width : 200px;"class="form-control" type="search" placeholder="주소로 리뷰 검색" aria-label="Search" id="address" name="address">
         </div>
-    {% endfor %}
-</div>
-=======
-<div style="margin : 15vh;" ></div>
-{% for review in reviews %}
-    <div style="border: 3px; margin: auto 8vh auto; line-height: 2.8vh;height: 17.6vh ;" >
-        <img class="left-side-room-img" align = "left" style= " height: 12vh; width :6.8vw; " src="{% static 'images/45.png' %}"  >
-
-        <strong><span style="font-size: 23px; line-height: 2.5vw;">&ensp;최신 리뷰 제목{{ review.reviewTitle }}</span></strong> <span style = "float : right;"> 추천 수 {{ room.builtYear }} </span>
-        <div sytle = "color: #ECECEC;">&ensp; 리뷰내용리뷰내용리뷰내용리뷰내용리뷰내용리뷰내용리뷰내용리뷰내용</div>
-        <span style = "color : #A23355 ;font-size: 2vw *3.7vh; letter-spacing :1vw; ">&ensp;ㅇㅏㅇㅣㅋㅗㄴ</span>
-
+    </form> </span>
+        </div>
     </div>
-
-{% endfor %}
-
 {% endblock %}
 
-
-
-
-</body>
->>>>>>> Stashed changes
-<script>
-    function sort(){
-        let selected = document.getElementById('sort_select_box');
-        let a = window.location.href;
-        let b = a.indexOf('sorted');
-        window.location.href = a.slice(0, b)+'sorted='+document.getElementById('sort_select_box').value;
-    }
-    window.onload=function() {
-        let a = new URLSearchParams(window.location.search).get('sorted');
-        var b = document.createElement("option");
-        switch (a) {
-            case '2':
-                b.innerText = '추천 순';
-                break;
-            case '3':
-                b.innerText = '정확도 순';
-                break;
-            case '1':
-            default:
-                b.innerText = '최신 순';
-                break;
-        }
-        b.selected = true;
-        b.style.display = 'none';
-        document.getElementById('sort_select_box').appendChild(b);
-    }
-</script>
-
-{% endblock %}
