메인페이지: 지도-원룸이름 존재하지 않는 데이터는 원룸주소 표시/ DB에 리뷰데이터 없을시, 리뷰없음 메시지 출력

--- a/templates/normal_user_main.html
+++ b/templates/normal_user_main.html
@@ -14,6 +14,7 @@ $(document).ready(function(){
 });
 </script>
 <div class="slider" id="famous">
+{% if popular_reviews %}
     {% for popular_review in popular_reviews %} {# 추천순 데이터 최대 4개 출력 #}
         <div> {# 클릭시 해당 리뷰로 이동하는 링크 필요 #}
             <span>작성자 : {{ popular_review.reviewWriter }}</span>
@@ -29,8 +30,12 @@ $(document).ready(function(){
             </span>
         </div>
     {% endfor %}
+    {% else %}
+        <div>등록된 리뷰가 없습니다.</div>
+{% endif %}
 </div>
 <div class="slider" id="recent">
+{% if latest_reviews %}
     {% for latest_review in latest_reviews %} {# 최신순 데이터 최대 4개 출력 #}
         <div> {# 클릭시 해당 리뷰로 이동하는 링크 필요 #}
             <span>작성자 : {{ latest_review.reviewWriter }}</span>
@@ -46,6 +51,9 @@ $(document).ready(function(){
             </span>
         </div>
     {% endfor %}
+    {% else %}
+        <div>등록된 리뷰가 없습니다.</div>
+{% endif %}
 </div>
 {% endblock %}
 
@@ -110,9 +118,15 @@ $(document).ready(function(){
                         position: coords
                     });
 
+                    var room_info = ''
+                    if(value.name !== null)
+                        room_info = value.name
+                    else
+                        room_info = value.address
+
                     // 인포윈도우로 장소에 대한 설명을 표시합니다
                     var infowindow = new kakao.maps.InfoWindow({
-                        content: '<div style="width:150px;text-align:center;padding:6px 0;">원룸 이름</div>'
+                        content: '<div style="width:150px;text-align:center;padding:6px 0;">'+ room_info + '</div>'
                     });
 
                     infowindow.open(map, marker);
