--- a/templates/room_test.html
+++ b/templates/room_test.html
@@ -42,6 +42,7 @@
             </div>
     </div>
 <div style="margin : 15vh;" id="reviews">
+    {{data.reviews}}
     {% for review in reviews %}
         <div style="border: 3px; margin: auto 0 auto; line-height: 2.8vh;height: 20vh;" >
             <div style= "height: 12vh; width :6.8vw; display:inline-block; float:left;">
