slider 클릭 오류 수정

--- a/templates/normal_user_main.html
+++ b/templates/normal_user_main.html
@@ -21,16 +21,19 @@
 <script type="text/javascript" src="{% static 'js/normalUserMainTemplate.js' %}"></script>
 <script>
 $(document).ready(function(){
-    $('.slider').bxSlider({
+    var a = $('.slider').bxSlider({
+        maxSlides:4,
+        infiniteLoop:false,
+        touchEnabled:false,
     });
 });
 </script>
-<div class="slider" id="famous">
+<div class="slider" id="famous" onclick="">
     {% if popular_reviews %}
         {% for popular_review in popular_reviews %} {# 추천순 데이터 최대 4개 출력 #}
-            <div> {# 클릭시 해당 리뷰로 이동하는 링크 필요 #}
-                <span>작성자 : {{ popular_review.reviewWriter }}</span>
-                <span>추천 수 : {{ popular_review.recommendedOn|length }}</span>
+            <div onclick="window.location.replace('{{normalUserReviewRead}}?id={{popular_review.id}}')"> {# 클릭시 해당 리뷰로 이동하는 링크 필요 #}
+                <span>작성자 : {{ popular_review.reviewWriter }}</span><br>
+                <span>추천 수 : {{ popular_review.recommendedOn|length }}</span><br>
                 <div>리뷰 제목 : {{ popular_review.reviewTitle }}</div>
                 <div>리뷰 내용 : {{ popular_review.reviewSentence }}</div>
                 <span>대표 사진</span>
@@ -43,31 +46,29 @@ $(document).ready(function(){
             </div>
         {% endfor %}
     {% else %}
-        <div> {# 클릭시 해당 리뷰로 이동하는 링크 필요 #}
-
-        </div>
+        <div>등록된 리뷰가 없습니다.</div>
     {% endif %}
 </div>
 <div class="slider" id="recent">
-{% if latest_reviews %}
-    {% for latest_review in latest_reviews %} {# 최신순 데이터 최대 4개 출력 #}
-        <div> {# 클릭시 해당 리뷰로 이동하는 링크 필요 #}
-            <span>작성자 : {{ latest_review.reviewWriter }}</span>
-            <span>추천 수 : {{ latest_review.recommendedOn|length }}</span>
-            <div>리뷰 제목 : {{ latest_review.reviewTitle }}</div>
-            <div>리뷰 내용 : {{ latest_review.reviewSentence }}</div>
-            <span>대표 사진</span>
-            <img class="left-side-room-img" src="{% static 'images/' %}{{ latest_review.additionalImage|first }}">
-            <span>아이콘 목록 :
-                {% for latest_icon in latest_review.includedIcon %}
-                    <img src="{% static 'images/iconImage/' %}{{ latest_icon }}">
-                {% endfor %}
-            </span>
-        </div>
-    {% endfor %}
+    {% if latest_reviews %}
+        {% for latest_review in latest_reviews %} {# 최신순 데이터 최대 4개 출력 #}
+            <div onclick="window.location.replace('{{normalUserReviewRead}}?id={{latest_review.id}}')"> {# 클릭시 해당 리뷰로 이동하는 링크 필요 #}
+                <span>작성자 : {{ latest_review.reviewWriter }}</span>
+                <span>추천 수 : {{ latest_review.recommendedOn|length }}</span>
+                <div>리뷰 제목 : {{ latest_review.reviewTitle }}</div>
+                <div>리뷰 내용 : {{ latest_review.reviewSentence }}</div>
+                <span>대표 사진</span>
+                <img class="left-side-room-img" src="{% static 'images/' %}{{ latest_review.additionalImage|first }}">
+                <span>아이콘 목록 :
+                    {% for latest_icon in latest_review.includedIcon %}
+                        <img src="{% static 'images/iconImage/' %}{{ latest_icon }}">
+                    {% endfor %}
+                </span>
+            </div>
+        {% endfor %}
     {% else %}
-        <div>등록된 리뷰가 없습니다.</div>
-{% endif %}
+            <div>등록된 리뷰가 없습니다.</div>
+    {% endif %}
 </div>
 {% endblock %}
 
