원룸 검색 페이지 작성(수정 필요?)

--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,7 @@
 {% url 'loginPage' as loginPage %}
 {% url 'infoCheck' as infoCheck %}
 {% url 'normalUserReviewSearch' as normalUserReviewSearch %}
+{% url 'normalUserRoomSearchTest' as normalUserRoomSearchTest %}
 {% url 'normalUserReviewRead' as normalUserReviewRead %}
 {% url 'wroteReviews' as wroteReviews %}
 
