--- a/static/css/normalUserRoomSearchTemplate.scss
+++ b/static/css/normalUserRoomSearchTemplate.scss
@@ -99,26 +99,33 @@ div#built_year_selects_div{
   text-decoration:none;
   color:#A23355;
 }
-#mainDiv::-webkit-scrollbar{
+#rooms_title{
+  height:7.572%;
+  margin-top:3.038%;
+  font-weight:bolder;
+  line-height:1;
+  text-align:center;
+}
+#rooms::-webkit-scrollbar{
   width:18px;
 }
-#mainDiv::-webkit-scrollbar-thumb{
+#rooms::-webkit-scrollbar-thumb{
   background-color:black;
 }
-#mainDiv::-webkit-scrollbar-track{
+#rooms::-webkit-scrollbar-track{
   background-color:gray;
 }
-#mainDiv{
+#rooms{
   overflow-y:scroll;
 }
 #rooms{
-  width:77.26%;
+  width:93.51%;
   height:100%;
   margin-left:6.25%;
 }
 .room{
   position:relative;
-  width:100%;
+  width:75.35%;
   height:19.19%;
   padding-top:3.37%;
   padding-bottom:3.37%;
